@@ -28,6 +28,7 @@ xine-lib (1-rc4)
   * DXR3: option to use Pan & Scan information embedded in MPEG and DVB streams
   * disable AUD content detection because of false positives
   * fix Real pnm/rtsp streaming on big endian platforms
+  * big endian fix, and delay fixes for the file (wave) audio output plugin
 
 xine-lib (1-rc3c)
   * fix the deadlock with non-seekable input plugins
